objects/CountryCategoryMapping__c.object
<CustomObject>
    <fields>
        <fullName>CaseQualification__c</fullName>
        <label>Case Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Tree Selection</fullName>
                </value>
                <value>
                    <fullName>Product Selection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Case Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Documentation Request</fullName>
                </value>
                <value>
                    <fullName>Delivery or Collection Issues*</fullName>
                </value>
                <value>
                    <fullName>Documentation Missing or Incorrect*</fullName>
                </value>
                <value>
                    <fullName>Installation / Setup</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Order Booking</fullName>
                </value>
                <value>
                    <fullName>Order Inquiry</fullName>
                </value>
                <value>
                    <fullName>Order Modification</fullName>
                </value>
                <value>
                    <fullName>Others*</fullName>
                </value>
                <value>
                    <fullName>Pricing and Availability</fullName>
                </value>
                <value>
                    <fullName>Product Selection &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Quotation Request</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Account Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SC</fullName>
                    <label>Electrician</label>
                </value>
                <value>
                    <fullName>PB</fullName>
                    <label>Panel Builder</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Digital &amp; Service Partner</label>
                </value>
                <value>
                    <fullName>EU</fullName>
                    <label>End User</label>
                </value>
                <value>
                    <fullName>IG</fullName>
                    <label>Internal Schneider Entity</label>
                </value>
                <value>
                    <fullName>LC</fullName>
                    <label>Contractor</label>
                </value>
                <value>
                    <fullName>OM</fullName>
                    <label>Original Equipment Manufacturer</label>
                </value>
                <value>
                    <fullName>RT</fullName>
                    <label>Consumer Retailer</label>
                </value>
                <value>
                    <fullName>SI</fullName>
                    <label>System Integrator</label>
                </value>
                <value>
                    <fullName>SP</fullName>
                    <label>Specifier</label>
                </value>
                <value>
                    <fullName>VR</fullName>
                    <label>IT Reseller</label>
                </value>
                <value>
                    <fullName>WD</fullName>
                    <label>B2B Distribution</label>
                </value>
                <value>
                    <fullName>XX</fullName>
                    <label>Other Value-Chain Role</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BFOCCC-314 R6 2017: This field will control if Contract Search is enabled for eclipse</description>
        <label>Display Contract Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractSelectionMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BFOCCC-314 R6 2017 Release: This checkbox mandates that contract selection is mandatory</description>
        <label>Contract Selection Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Category Mappings</relationshipLabel>
        <relationshipName>Category_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomTreeMandatoryLevel__c</fullName>
        <label>Custom Tree Mandatory Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomTree__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Tree</label>
        <referenceTo>CustomCategoryTree__c</referenceTo>
        <relationshipLabel>Category Mappings</relationshipLabel>
        <relationshipName>Category_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerFacingCategory__c</fullName>
        <label>Customer facing Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultCategory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If we don&apos;t find any categories we will show the default categories for country.</description>
        <label>Default Customer Request Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultPOC__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default POC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PointOfContact__c.ChannelType__c</field>
                <operation>equals</operation>
                <value>Portal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PointOfContact__c</referenceTo>
        <relationshipLabel>Category Mappings</relationshipLabel>
        <relationshipName>Category_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DisplayProductSelection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BFOCCC-314 R6 2017: This checkbox will control if product selection component is to be displayed or not on portals</description>
        <label>Display Product Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAQSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BFOCCC-314 R6 2017: This fild will control if we want to show FAQ Search page or not on portals</description>
        <label>FAQ Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <description>Please Enter language Code only</description>
        <inlineHelpText>Please Enter language Code only.</inlineHelpText>
        <label>Language Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRMClassification__c</fullName>
        <label>PRM Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>IG</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>RT</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>WD</fullName>
                </value>
                <value>
                    <fullName>XX</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductSelectionMandatoryLevel__c</fullName>
        <label>Product Selection Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductSelectionMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BFOCCC-314 R6 2017: This field will control if product selection is mandatory during case creation in portals</description>
        <label>Product Selection Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesOrderNumberMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Order Number Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesOrderNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Order Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowInPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Showed only Selected Categories in portal</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRM</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Eclipse</fullName>
                </value>
                <value>
                    <fullName>OCM</fullName>
                </value>
                <value>
                    <fullName>Cassini</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_DuplicateKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TECH_DuplicateKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Country Category Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>LanguageCode__c</columns>
        <columns>ShowInPortal__c</columns>
        <columns>Channel__c</columns>
        <columns>ContractSearch__c</columns>
        <columns>ContractSelectionMandatory__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DisplayProductSelection__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>ProductSelectionMandatory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CIS_Active</fullName>
        <columns>NAME</columns>
        <columns>ShowInPortal__c</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DefaultPOC__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>SalesOrderNumberMandatory__c</columns>
        <columns>CaseQualification__c</columns>
        <columns>ProductSelectionMandatoryLevel__c</columns>
        <columns>CustomTree__c</columns>
        <columns>CustomTreeMandatoryLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomerFacingCategory__c</field>
            <operation>equals</operation>
            <value>CLDEC18CCCISR</value>
        </filters>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>OCM</value>
        </filters>
        <label>All CIS Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil_Active</fullName>
        <columns>NAME</columns>
        <columns>ShowInPortal__c</columns>
        <columns>Category__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DefaultPOC__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>SalesOrderNumberMandatory__c</columns>
        <columns>CaseQualification__c</columns>
        <columns>ProductSelectionMandatoryLevel__c</columns>
        <columns>CustomTree__c</columns>
        <columns>CustomTreeMandatoryLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Brazil Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cassini</fullName>
        <columns>NAME</columns>
        <columns>ShowInPortal__c</columns>
        <columns>Category__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DefaultPOC__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>SalesOrderNumberMandatory__c</columns>
        <columns>CaseQualification__c</columns>
        <columns>ProductSelectionMandatoryLevel__c</columns>
        <columns>CustomTree__c</columns>
        <columns>CustomTreeMandatoryLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filters>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Cassini</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Eclipse_Active</fullName>
        <columns>NAME</columns>
        <columns>ShowInPortal__c</columns>
        <columns>Category__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DefaultPOC__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>SalesOrderNumberMandatory__c</columns>
        <columns>CaseQualification__c</columns>
        <columns>ProductSelectionMandatoryLevel__c</columns>
        <columns>CustomTree__c</columns>
        <columns>CustomTreeMandatoryLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Russian Federation</value>
        </filters>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Russian Federation Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>France_Active</fullName>
        <columns>Source__c</columns>
        <columns>Country__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>France_Active1</fullName>
        <columns>NAME</columns>
        <columns>ShowInPortal__c</columns>
        <columns>Category__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DefaultPOC__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>SalesOrderNumberMandatory__c</columns>
        <columns>CaseQualification__c</columns>
        <columns>ProductSelectionMandatoryLevel__c</columns>
        <columns>CustomTree__c</columns>
        <columns>CustomTreeMandatoryLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>France Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>India_Active</fullName>
        <columns>NAME</columns>
        <columns>ShowInPortal__c</columns>
        <columns>Category__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DefaultPOC__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>SalesOrderNumberMandatory__c</columns>
        <columns>CaseQualification__c</columns>
        <columns>ProductSelectionMandatoryLevel__c</columns>
        <columns>CustomTree__c</columns>
        <columns>CustomTreeMandatoryLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>India Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Russian_Federation</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DefaultPOC__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>DisplayProductSelection__c</columns>
        <columns>ProductSelectionMandatory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Russian Federation</value>
        </filters>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Russian Federation - Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Spain_Active</fullName>
        <columns>NAME</columns>
        <columns>ShowInPortal__c</columns>
        <columns>Category__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DefaultPOC__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>SalesOrderNumberMandatory__c</columns>
        <columns>CaseQualification__c</columns>
        <columns>ProductSelectionMandatoryLevel__c</columns>
        <columns>CustomTree__c</columns>
        <columns>CustomTreeMandatoryLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filters>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Spain Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Turkey_Active</fullName>
        <columns>NAME</columns>
        <columns>ShowInPortal__c</columns>
        <columns>Category__c</columns>
        <columns>DefaultCategory__c</columns>
        <columns>DefaultPOC__c</columns>
        <columns>CustomerFacingCategory__c</columns>
        <columns>PRMClassification__c</columns>
        <columns>FAQSearch__c</columns>
        <columns>SalesOrderNumber__c</columns>
        <columns>SalesOrderNumberMandatory__c</columns>
        <columns>CaseQualification__c</columns>
        <columns>ProductSelectionMandatoryLevel__c</columns>
        <columns>CustomTree__c</columns>
        <columns>CustomTreeMandatoryLevel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Turkey</value>
        </filters>
        <filters>
            <field>ShowInPortal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Source__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Turkey Active</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CCM_VR_MAR18CCC01_ClassificationCheck</fullName>
        <active>true</active>
        <description>When the Case Qualification is selected as Custom Tree , you have to select related Custom tree</description>
        <errorConditionFormula>AND( !$User.BypassVR__c ,   ISPICKVAL( CaseQualification__c , &apos;Custom Tree Selection&apos;) , ISBlank( CustomTree__c ) )</errorConditionFormula>
        <errorMessage>when you select Case Qualification as custom tree you must select the related Custom tree</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCM_VR_MAR18CCC01_SalesOrderCheck</fullName>
        <active>true</active>
        <description>When you make Sales Order number Mandatory, Sales Order number must be checked.</description>
        <errorConditionFormula>AND( !$User.BypassVR__c ,  SalesOrderNumberMandatory__c  , NOT(  SalesOrderNumber__c ) )</errorConditionFormula>
        <errorMessage>You cannot make Sales Order number as Mandatory without checking Sales Order Number first</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCM_VR_R617CCC01_CheckProductExposed</fullName>
        <active>false</active>
        <errorConditionFormula>AND( !$User.BypassVR__c , ProductSelectionMandatory__c , NOT( DisplayProductSelection__c ) )</errorConditionFormula>
        <errorDisplayField>Channel__c</errorDisplayField>
        <errorMessage>You cannot make Product Selection as Mandatory without checking Display Product selection first</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCM_VR_R617CCC02_CheckContractEnabled</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !$User.BypassVR__c ,  ContractSelectionMandatory__c , NOT(  ContractSearch__c ) )</errorConditionFormula>
        <errorMessage>You cannot make Contract Selection as Mandatory without checking Contract Search first</errorMessage>
    </validationRules>
</CustomObject>